<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_max">Max</string>
    <string name="temp_min">Min</string>
    <string name="real_feel">Real Feel:</string>
    <string name="city">City</string>
    <string name="find">Find</string>
    <string name="settings">Settings</string>
    <string name="unit">Unit</string>
    <string name="save">Save</string>
    <string name="permission_warning">Please give location permission to be able to use the WeatherApp</string>
    <string name="warning_location_service">Please enable the location service</string>
    <string name="app_name">WeatherApp</string>
</resources>