<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_background"
        tools:context=".view.OverviewFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linear_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="visible">

            <ImageView
                    android:id="@+id/mainImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:importantForAccessibility="no"
                    tools:srcCompat="@tools:sample/avatars" />

            <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:text="céu limpo"
                    android:fontFamily="@font/baloo_thambi" />

            <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Araçatuba, BR" />

            <LinearLayout
                    android:id="@+id/ll_current"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                <TextView
                        android:id="@+id/current_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="96sp"
                        tools:text="28"
                        android:fontFamily="@font/baloo_thambi" />

                <TextView
                        android:id="@+id/unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="18sp"
                        android:textColor="@color/black"
                        android:textSize="96sp"
                        tools:text="ºC"
                        android:fontFamily="@font/baloo_thambi" />


                <View
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@color/grey" />

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                    <LinearLayout
                            android:id="@+id/ll_temp_max"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center">

                        <TextView
                                android:id="@+id/temp_max"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="24sp"
                                tools:text="36º" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textSize="20sp"
                                android:text="@string/temp_max" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center">

                        <TextView
                                android:id="@+id/temp_min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="24sp"
                                tools:text="20º" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textSize="20sp"
                                android:text="@string/temp_min" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_real_feel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/ll_current">

                <TextView
                        android:id="@+id/real_feel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/real_feel"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"

                        android:textStyle="bold"
                        android:textColor="@color/black"
                        tools:text="30º" />
            </LinearLayout>

            <!--        FORECAST-->

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="LinearLayoutManager" />
        </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
            android:id="@+id/linear_layout_permission_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="@string/permission_warning"
                tools:text="Please give location permission to be able to use the weather app" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout_location_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="@string/warning_location_service"
                tools:text="Please enable the location service" />
    </LinearLayout>

    <FrameLayout
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



